--- a/Homepage/headings.html
+++ b/Homepage/headings.html
@@ -1,68 +1,68 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="ja">
    <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=shift_jis">
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta http-equiv="Content-Style-Type" content="text/css">
       <meta name="Author" content="Nao Kurosawa&nbsp;&lt;14es028@ms.dendai.ac.jp&gt;">
       <link rel="stylesheet" type="text/css" href="css.css">
-      <title>‰æ‘œ‚ÌŽí—Þ‚Æˆ³k•û–@‚É‚æ‚éƒTƒCƒY‚Æ‰æŽ¿‚Ì•Ï‰»</title>
+      <title>ç”»åƒã®ç¨®é¡žã¨åœ§ç¸®æ–¹æ³•ã«ã‚ˆã‚‹ã‚µã‚¤ã‚ºã¨ç”»è³ªã®å¤‰åŒ–</title>
    </head>
    <body>
-      <h1>‰æ‘œ‚ÌŽí—Þ‚Æˆ³k•û–@‚É‚æ‚éƒTƒCƒY‚Æ‰æŽ¿‚Ì•Ï‰»</h1>
-      <table><!-- –––––ƒOƒ‰ƒf[ƒVƒ‡ƒ“‚±‚±‚©‚ç––––– -->
-         <caption>ƒOƒ‰ƒf[ƒVƒ‡ƒ“‚Ì‚ ‚é‰æ‘œ<br>BitmapŒ`Ž®‚Å‚Í537,722ƒoƒCƒg‚Å‚·B</caption>
+      <h1>ç”»åƒã®ç¨®é¡žã¨åœ§ç¸®æ–¹æ³•ã«ã‚ˆã‚‹ã‚µã‚¤ã‚ºã¨ç”»è³ªã®å¤‰åŒ–</h1>
+      <table><!-- ï¼Šï¼Šï¼Šï¼Šï¼Šã‚°ãƒ©ãƒ‡ãƒ¼ã‚·ãƒ§ãƒ³ã“ã“ã‹ã‚‰ï¼Šï¼Šï¼Šï¼Šï¼Š -->
+         <caption>ã‚°ãƒ©ãƒ‡ãƒ¼ã‚·ãƒ§ãƒ³ã®ã‚ã‚‹ç”»åƒ<br>Bitmapå½¢å¼ã§ã¯537,722ãƒã‚¤ãƒˆã§ã™ã€‚</caption>
          <tbody class="t1">
             <tr>
-               <th>PNG<br>133,575ƒoƒCƒg</th>
-               <td><img src="gazo/.png" alt="•‘ò’¼" title="ƒOƒ‰ƒf[ƒVƒ‡ƒ“‚Ì‚ ‚éPNG‰æ‘œ"></td>
+               <th>PNG<br>133,575ãƒã‚¤ãƒˆ</th>
+               <td><img src="gazo/.png" alt="é»’æ²¢ç›´" title="ã‚°ãƒ©ãƒ‡ãƒ¼ã‚·ãƒ§ãƒ³ã®ã‚ã‚‹PNGç”»åƒ"></td>
             </tr>
             <tr>
-               <th>GIF<br>55,790ƒoƒCƒg</th>
-               <td><img src="gazo/.gif" alt="•‘ò’¼" title="ƒOƒ‰ƒf[ƒVƒ‡ƒ“‚Ì‚ ‚éGIF‰æ‘œ"></td>
+               <th>GIF<br>55,790ãƒã‚¤ãƒˆ</th>
+               <td><img src="gazo/.gif" alt="é»’æ²¢ç›´" title="ã‚°ãƒ©ãƒ‡ãƒ¼ã‚·ãƒ§ãƒ³ã®ã‚ã‚‹GIFç”»åƒ"></td>
             </tr>
             <tr>
-               <th>JPEG&nbsp;90%<br>45,964ƒoƒCƒg</th>
-               <td><img src="gazo/90.jpg" alt="•‘ò’¼" title="ƒOƒ‰ƒf[ƒVƒ‡ƒ“‚Ì‚ ‚éJPEG‰æ‘œ&nbsp;(90%•iŽ¿)"></td>
+               <th>JPEG&nbsp;90%<br>45,964ãƒã‚¤ãƒˆ</th>
+               <td><img src="gazo/90.jpg" alt="é»’æ²¢ç›´" title="ã‚°ãƒ©ãƒ‡ãƒ¼ã‚·ãƒ§ãƒ³ã®ã‚ã‚‹JPEGç”»åƒ&nbsp;(90%å“è³ª)"></td>
             </tr>
             <tr>
-               <th>JPEG&nbsp;50%<br>21,582ƒoƒCƒg</th>
-               <td><img src="gazo/50.jpg" alt="•‘ò’¼" title="ƒOƒ‰ƒf[ƒVƒ‡ƒ“‚Ì‚ ‚éJPEG‰æ‘œ&nbsp;(50%•iŽ¿)"></td>
+               <th>JPEG&nbsp;50%<br>21,582ãƒã‚¤ãƒˆ</th>
+               <td><img src="gazo/50.jpg" alt="é»’æ²¢ç›´" title="ã‚°ãƒ©ãƒ‡ãƒ¼ã‚·ãƒ§ãƒ³ã®ã‚ã‚‹JPEGç”»åƒ&nbsp;(50%å“è³ª)"></td>
             </tr>
             <tr>
-               <th>JPEG&nbsp;10%<br>9,746ƒoƒCƒg</th>
-               <td><img src="gazo/10.jpg" alt="•‘ò’¼" title="ƒOƒ‰ƒf[ƒVƒ‡ƒ“‚Ì‚ ‚éJPEG‰æ‘œ&nbsp;(10%•iŽ¿)"></td>
+               <th>JPEG&nbsp;10%<br>9,746ãƒã‚¤ãƒˆ</th>
+               <td><img src="gazo/10.jpg" alt="é»’æ²¢ç›´" title="ã‚°ãƒ©ãƒ‡ãƒ¼ã‚·ãƒ§ãƒ³ã®ã‚ã‚‹JPEGç”»åƒ&nbsp;(10%å“è³ª)"></td>
             </tr>
          </tbody>
-      </table><!-- –––––ƒOƒ‰ƒf[ƒVƒ‡ƒ“‚±‚±‚Ü‚Å––––– -->
+      </table><!-- ï¼Šï¼Šï¼Šï¼Šï¼Šã‚°ãƒ©ãƒ‡ãƒ¼ã‚·ãƒ§ãƒ³ã“ã“ã¾ã§ï¼Šï¼Šï¼Šï¼Šï¼Š -->
       <hr>
-      <table><!-- –––––‚×‚½‚±‚±‚©‚ç––––– -->
-         <caption>‚×‚½“h‚è‚Ì‰æ‘œ<br>BitmapŒ`Ž®‚Å‚Í537,722ƒoƒCƒg‚Å‚·B</caption>
+      <table><!-- ï¼Šï¼Šï¼Šï¼Šï¼Šã¹ãŸã“ã“ã‹ã‚‰ï¼Šï¼Šï¼Šï¼Šï¼Š -->
+         <caption>ã¹ãŸå¡—ã‚Šã®ç”»åƒ<br>Bitmapå½¢å¼ã§ã¯537,722ãƒã‚¤ãƒˆã§ã™ã€‚</caption>
          <tbody class="t2">
             <tr>
-               <th>PNG<br>40,317ƒoƒCƒg</th>
-               <td><img src="illust/.png" alt="›~¢ " title="‚×‚½“h‚è‚ÌPNG‰æ‘œ"></td>
+               <th>PNG<br>40,317ãƒã‚¤ãƒˆ</th>
+               <td><img src="illust/.png" alt="â—‹Ã—â–³â–¡" title="ã¹ãŸå¡—ã‚Šã®PNGç”»åƒ"></td>
             </tr>
             <tr>
-               <th>GIF<br>19,272ƒoƒCƒg</th>
-               <td><img src="illust/.gif" alt="›~¢ " title="‚×‚½“h‚è‚ÌGIF‰æ‘œ"></td>
+               <th>GIF<br>19,272ãƒã‚¤ãƒˆ</th>
+               <td><img src="illust/.gif" alt="â—‹Ã—â–³â–¡" title="ã¹ãŸå¡—ã‚Šã®GIFç”»åƒ"></td>
             </tr>
             <tr>
-               <th>JPEG&nbsp;90%<br>17,177ƒoƒCƒg</th>
-               <td><img src="illust/90.jpg" alt="›~¢ " title="‚×‚½“h‚è‚ÌJPEG‰æ‘œ&nbsp;(90%•iŽ¿)"></td>
+               <th>JPEG&nbsp;90%<br>17,177ãƒã‚¤ãƒˆ</th>
+               <td><img src="illust/90.jpg" alt="â—‹Ã—â–³â–¡" title="ã¹ãŸå¡—ã‚Šã®JPEGç”»åƒ&nbsp;(90%å“è³ª)"></td>
             </tr>
             <tr>
-               <th>JPEG&nbsp;50%<br>10,126ƒoƒCƒg</th>
-               <td><img src="illust/50.jpg" alt="›~¢ " title="‚×‚½“h‚è‚ÌJPEG‰æ‘œ&nbsp;(50%•iŽ¿)"></td>
+               <th>JPEG&nbsp;50%<br>10,126ãƒã‚¤ãƒˆ</th>
+               <td><img src="illust/50.jpg" alt="â—‹Ã—â–³â–¡" title="ã¹ãŸå¡—ã‚Šã®JPEGç”»åƒ&nbsp;(50%å“è³ª)"></td>
             </tr>
             <tr>
-               <th>JPEG&nbsp;10%<br>5,710ƒoƒCƒg</th>
-               <td><img src="illust/10.jpg" alt="›~¢ " title="‚×‚½“h‚è‚ÌJPEG‰æ‘œ&nbsp;(10%•iŽ¿)"></td>
+               <th>JPEG&nbsp;10%<br>5,710ãƒã‚¤ãƒˆ</th>
+               <td><img src="illust/10.jpg" alt="â—‹Ã—â–³â–¡" title="ã¹ãŸå¡—ã‚Šã®JPEGç”»åƒ&nbsp;(10%å“è³ª)"></td>
             </tr>
          </tbody>
       </table>
-      <hr><!-- –––––‚×‚½‚±‚±‚Ü‚Å––––– -->
+      <hr><!-- ï¼Šï¼Šï¼Šï¼Šï¼Šã¹ãŸã“ã“ã¾ã§ï¼Šï¼Šï¼Šï¼Šï¼Š -->
       <p>
-         <a onclick="javascript:window.close();" href="#">•Â‚¶‚é
+         <a onclick="javascript:window.close();" href="#">é–‰ã˜ã‚‹
          </a>
       </p>
    </body>
