--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <meta http-equiv="Cache-Control" content="no-cache">
       <meta http-equiv="Expires" content="0">
       <meta name="Author" content="Nao Kurosawa&nbsp;&lt;14es028@ms.dendai.ac.jp&gt;">
-      <link rel="stylesheet" type="text/css" href="../style/mystyle.css">
+      <link rel="stylesheet" type="text/css" href="./style/mystyle.css">
       <script type="text/javascript" src="http://analyzer54.fc2.com/ana/processor.php?uid=2610227"></script>
       <title></title>
    </head>
@@ -66,7 +66,7 @@
          </noscript>
          <p id="topDescription" style="font-size:90%;"></p>
          <div style="text-align:right;margin-right:12%;">
-            <img id="start-arrow" src="../files/start_off.png" width="225px" height="105px" alt="Start" title="Start Now!!" usemap="#arrow">
+            <img id="start-arrow" src="./files/start_off.png" width="225px" height="105px" alt="Start" title="Start Now!!" usemap="#arrow">
             <map name="arrow">
                <area alt="Start" style="cursor:default;" shape="rect" coords="0,0,158,24">
                <area alt="Start" style="cursor:default;" shape="rect" coords="0,80,158,105">
@@ -86,7 +86,7 @@
          <br>
          <br>
          <p style="text-align:right;">
-            <a onclick="javascript:open('../homepage/headings.html','gazo','width=700px,height=800px,resizable=yes,scrollbars=yes,status=yes,location=no,');void(0);" href="javascript:void(0);" id="size">画像の種類と圧縮方法によるサイズと画質の変化
+            <a onclick="javascript:open('./homepage/headings.html','gazo','width=700px,height=800px,resizable=yes,scrollbars=yes,status=yes,location=no,');void(0);" href="javascript:void(0);" id="size">画像の種類と圧縮方法によるサイズと画質の変化
             </a>
          </p>
          <p style="text-align:right;">
@@ -100,10 +100,7 @@
             </a>
          </p>
       </main>
-      <script src="../data/contents.js"></script>
-      <script src="../script/headerFooter.js"></script>
-      <script src="../script/top.js"></script>
-      <script type="text/javascript" src="../script/arrow.js"></script>
+      <script src="./script/top.js"></script>
    </body>
 </html>
 
