--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </a>
          </p>
       </main>
-      <script src="./script/top.js"></script>
+      <script src="./script/top.js" type="module"></script>
    </body>
 </html>
 
