--- a/Homepage/headings.html
+++ b/Homepage/headings.html
@@ -14,11 +14,11 @@
          <tbody class="t1">
             <tr>
                <th>PNG<br>133,575バイト</th>
-               <td><img src="gazo/.png" alt="黒沢直" title="グラデーションのあるPNG画像"></td>
+               <td><img src="gazo/png.png" alt="黒沢直" title="グラデーションのあるPNG画像"></td>
             </tr>
             <tr>
                <th>GIF<br>55,790バイト</th>
-               <td><img src="gazo/.gif" alt="黒沢直" title="グラデーションのあるGIF画像"></td>
+               <td><img src="gazo/gif.gif" alt="黒沢直" title="グラデーションのあるGIF画像"></td>
             </tr>
             <tr>
                <th>JPEG&nbsp;90%<br>45,964バイト</th>
@@ -40,11 +40,11 @@
          <tbody class="t2">
             <tr>
                <th>PNG<br>40,317バイト</th>
-               <td><img src="illust/.png" alt="○×△□" title="べた塗りのPNG画像"></td>
+               <td><img src="illust/png.png" alt="○×△□" title="べた塗りのPNG画像"></td>
             </tr>
             <tr>
                <th>GIF<br>19,272バイト</th>
-               <td><img src="illust/.gif" alt="○×△□" title="べた塗りのGIF画像"></td>
+               <td><img src="illust/gif.gif" alt="○×△□" title="べた塗りのGIF画像"></td>
             </tr>
             <tr>
                <th>JPEG&nbsp;90%<br>17,177バイト</th>
