--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
          <br>
          <br>
          <p style="text-align:right;">
-            <a onclick="javascript:open('./homepage/headings.html','gazo','width=700px,height=800px,resizable=yes,scrollbars=yes,status=yes,location=no,');void(0);" href="javascript:void(0);" id="size">画像の種類と圧縮方法によるサイズと画質の変化
+            <a onclick="javascript:open('./Homepage/headings.html','gazo','width=700px,height=800px,resizable=yes,scrollbars=yes,status=yes,location=no,');void(0);" href="javascript:void(0);" id="size">画像の種類と圧縮方法によるサイズと画質の変化
             </a>
          </p>
          <p style="text-align:right;">
