constantize author-info

--- a/Homepage/headings.html
+++ b/Homepage/headings.html
@@ -3,7 +3,6 @@
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta http-equiv="Content-Style-Type" content="text/css">
-      <meta name="Author" content="Nao Kurosawa&nbsp;&lt;14es028@ms.dendai.ac.jp&gt;">
       <link rel="stylesheet" type="text/css" href="css.css">
       <title>画像の種類と圧縮方法によるサイズと画質の変化</title>
    </head>
@@ -14,23 +13,23 @@
          <tbody class="t1">
             <tr>
                <th>PNG<br>133,575バイト</th>
-               <td><img src="gazo/png.png" alt="黒沢直" title="グラデーションのあるPNG画像"></td>
+               <td><img src="gazo/png.png" alt="PNG" title="グラデーションのあるPNG画像"></td>
             </tr>
             <tr>
                <th>GIF<br>55,790バイト</th>
-               <td><img src="gazo/gif.gif" alt="黒沢直" title="グラデーションのあるGIF画像"></td>
+               <td><img src="gazo/gif.gif" alt="GIF" title="グラデーションのあるGIF画像"></td>
             </tr>
             <tr>
                <th>JPEG&nbsp;90%<br>45,964バイト</th>
-               <td><img src="gazo/90.jpg" alt="黒沢直" title="グラデーションのあるJPEG画像&nbsp;(90%品質)"></td>
+               <td><img src="gazo/90.jpg" alt="JPEG 90" title="グラデーションのあるJPEG画像&nbsp;(90%品質)"></td>
             </tr>
             <tr>
                <th>JPEG&nbsp;50%<br>21,582バイト</th>
-               <td><img src="gazo/50.jpg" alt="黒沢直" title="グラデーションのあるJPEG画像&nbsp;(50%品質)"></td>
+               <td><img src="gazo/50.jpg" alt="JPEG 50" title="グラデーションのあるJPEG画像&nbsp;(50%品質)"></td>
             </tr>
             <tr>
                <th>JPEG&nbsp;10%<br>9,746バイト</th>
-               <td><img src="gazo/10.jpg" alt="黒沢直" title="グラデーションのあるJPEG画像&nbsp;(10%品質)"></td>
+               <td><img src="gazo/10.jpg" alt="JPEG 10" title="グラデーションのあるJPEG画像&nbsp;(10%品質)"></td>
             </tr>
          </tbody>
       </table><!-- ＊＊＊＊＊グラデーションここまで＊＊＊＊＊ -->
