--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <meta http-equiv="Content-Script-Type" content="text/javascript">
       <meta http-equiv="Cache-Control" content="no-cache">
       <meta http-equiv="Expires" content="0">
-      <link rel="stylesheet" type="text/css" href="./style/mystyle.css">
+      <link rel="stylesheet" type="text/css" href="/style/mystyle.css">
       <script type="text/javascript" src="http://analyzer54.fc2.com/ana/processor.php?uid=2610227"></script>
       <title></title>
    </head>
@@ -65,7 +65,7 @@
          </noscript>
          <p id="topDescription" style="font-size:90%;"></p>
          <div style="text-align:right;margin-right:12%;">
-            <img id="start-arrow" src="./files/start_off.png" width="225px" height="105px" alt="Start" title="Start Now!!" usemap="#arrow">
+            <img id="start-arrow" src="/files/start_off.png" width="225px" height="105px" alt="Start" title="Start Now!!" usemap="#arrow">
             <map name="arrow">
                <area alt="Start" style="cursor:default;" shape="rect" coords="0,0,158,24">
                <area alt="Start" style="cursor:default;" shape="rect" coords="0,80,158,105">
@@ -95,7 +95,7 @@
             </a>
          </p>
       </main>
-      <script src="./script/top.js" type="module"></script>
+      <script src="/script/top.js" type="module"></script>
    </body>
 </html>
 
