--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <meta http-equiv="Content-Script-Type" content="text/javascript">
       <meta http-equiv="Cache-Control" content="no-cache">
       <meta http-equiv="Expires" content="0">
-      <link rel="stylesheet" type="text/css" href="/style/mystyle.css">
+      <link rel="stylesheet" type="text/css" href="./style/mystyle.css">
       <script type="text/javascript" src="http://analyzer54.fc2.com/ana/processor.php?uid=2610227"></script>
       <title></title>
    </head>
@@ -95,7 +95,7 @@
             </a>
          </p>
       </main>
-      <script src="/script/top.js" type="module"></script>
+      <script src="./script/top.js" type="module"></script>
    </body>
 </html>
 
