--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang=ja>
+<!DOCTYPE html>
+<html lang="en">
    <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title></title>
       <!--
 　 ／￣￣￣￣￣￣￣￣￣￣￣￣￣￣＼
 　|　ソースページへようこそ！　　　|
@@ -37,8 +40,8 @@
 　 |  工夫した点                                            12|
 　 |   ・スタイルシートを駆使してデザインも頑張った               月|
 　 |   ・スクリプトを使って光るボタンを作った                    31|
-　 |   ・HTML 4.01 STRICT に準拠　　　　　　　　　　　　　　　　　日|
-　 |   ・CSS 3 にも完全準拠　　　　　　　　　　　　　　　　　　　　 土|
+　 |   ・HTML 4.01 STRICT に準拠 → HTML5 に変更              日|
+　 |   ・CSS 3 にも完全準拠                                  土|
 　 |             ｡                                           |
 　 |   ∧＿∧    ／                                           |
 　 |＿(　´ー｀)／＿＿皿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿|
@@ -47,13 +50,7 @@
 　　│　　　│
 　　＿＿∧＿＿＿＿
        -->
-      <meta http-equiv="Content-Style-Type" content="text/css">
-      <meta http-equiv="Content-Script-Type" content="text/javascript">
-      <meta http-equiv="Cache-Control" content="no-cache">
-      <meta http-equiv="Expires" content="0">
       <link rel="stylesheet" type="text/css" href="./style/mystyle.css">
-      <script type="text/javascript" src="http://analyzer54.fc2.com/ana/processor.php?uid=2610227"></script>
-      <title></title>
    </head>
    <body>
       <header></header>
@@ -98,4 +95,3 @@
       <script src="./script/top.js" type="module"></script>
    </body>
 </html>
-
