--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 　　│　　　│
 　　＿＿∧＿＿＿＿
        -->
-      <link rel="stylesheet" type="text/css" href="./style/mystyle.css">
+      <link rel="stylesheet" type="text/css" href="/style/mystyle.css">
    </head>
    <body>
       <header></header>
@@ -62,7 +62,7 @@
          </noscript>
          <p id="topDescription" style="font-size:90%;"></p>
          <div style="text-align:right;margin-right:12%;">
-            <img id="start-arrow" src="./files/start_off.png" width="225px" height="105px" alt="Start" title="Start Now!!" usemap="#arrow">
+            <img id="start-arrow" src="/files/start_off.png" width="225px" height="105px" alt="Start" title="Start Now!!" usemap="#arrow">
             <map name="arrow">
                <area alt="Start" style="cursor:default;" shape="rect" coords="0,0,158,24">
                <area alt="Start" style="cursor:default;" shape="rect" coords="0,80,158,105">
@@ -92,6 +92,6 @@
             </a>
          </p>
       </main>
-      <script src="./script/top.js" type="module"></script>
+      <script type="module" src="/script/top.js"></script>
    </body>
 </html>
